fixed moment of overflowing

--- a/src/css/emscripten.css
+++ b/src/css/emscripten.css
@@ -16,7 +16,7 @@ div.emscripten {
 }
 
 div.emscripten_border {
-	border: 1px solid black;
+	border: 1px solid #0b1118;
 }
 
 .spinner {
@@ -32,7 +32,7 @@ div.emscripten_border {
 	border-bottom: 10px solid rgb(0,150,240);
 	border-top: 10px solid rgb(255,255,255);
 	border-radius: 100%;
-	background-color: rgb(0,0,0);
+	background-color: #0b1118;
 }
 @-webkit-keyframes rotation {
 	from {-webkit-transform: rotate(0deg);}
