--- a/src/sass/canvas.scss
+++ b/src/sass/canvas.scss
@@ -8,9 +8,12 @@ body {
 
 // set canvas to be full-screen
 canvas {
+	position:absolute;
+    top: 0px;
+    left: 0px;
 	border: 0px none;
 	background-color: $bg-color;
 	display: none;
-	width: 100vw;
-	height: 100vh;
+	width: 0px;
+	height: 0px;
 }
